feat: Agregando carpeta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>index</title>
 </head>
 <body>
-    
+    <div class="containerCristian">
+        <section class="sectionCristian">
+            
+        </section>
+    </div>
 </body>
 </html>
