--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
             
         </section>
     </div>
+
+    <section>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div>
+
+        </div>
+    </section>
+
 </body>
 </html>
