--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
             </div>
         </section>
     </div>
+
+    <section>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div>
+
+        </div>
+    </section>
+
 </body>
 </html>
