feat: correccion de maquetacion

--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
 
     <section>
         <div>
-            <img src="" alt="">
+            <img src="img/mv23036.jpeg" alt="fotoPerfil">
         </div>
         <div>
+
+            <h1>Carlos Manuel Melendez Villatoro</h1>
+            <div>
+                <h2>Descripcion</h2>
+                <p>Soy un estudiante de la Universidad de El Salvador, actualmente cursando el cuarto ciclo de la carrera de Ingeniería de Sistemas Informáticos.</p>
+            </div>
+            <div>
+                <ul>    
+                    <li>Instagram: <a href="https://www.instagram.com/manuel_.mv">manuel_.mv</a></li>
+                </ul>
+            </div>
 
         </div>
     </section>
