feat: nombre del perfil y archivo de estilos

--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style-javier.css">
     <title>index</title>
 </head>
 <body>
-    <div class="containerCristian">
-        <section class="sectionCristian">
+    <div class="contenedor__javier">
+        <div class="nombre__javier">
+            <h1>Javier Orlando Colocho Bolainez</h1>
+        </div>
+        <div class="foto__javier">
             
-        </section>
+        </div>
+        <div class="descripcion__javier">
+
+        </div>
+        <div class="redes__javier">
+
+        </div>
     </div>
 </body>
 </html>
