feat: correccion de links

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div>
                 <ul>    
                     <li>Instagram: <a href="https://www.instagram.com/manuel_.mv">manuel_.mv</a></li>
+                    <li>X: <a href="https://x.com/Manuel_mv15">@Manuel_mv15</a></li>
                 </ul>
             </div>
 
