--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
             
         </section>
     </div>
+    <div class="container__ivan">
+        <h2>Josué Iván Molina Romero</h2>
+        <img src="" alt="">
+        <p>Descripción</p>
+        <div class="container__ivan__redes">
+            <ul></ul>
+        </div>
+    </div>
 </body>
 </html>
