feat: foto de perfil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Javier Orlando Colocho Bolainez</h1>
         </div>
         <div class="foto__javier">
-            
+            <img src="img/perfilJavier.png" alt="">
         </div>
         <div class="descripcion__javier">
 
