feat: Agregando informacion

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>index</title>
 </head>
 <body>
+    <div class="Presentacion">
+        <h1>Grupo de trabajo de tpi de la carrera de ingenieria de sistemas</h1>
+    </div>
     <div class="containerCristian">
         <section class="sectionCristian">
-            
+            <div class="imgCristian">
+                <img src="img/perfil.png" alt="Cristian" class="imagenCristian">
+                <h1>Nombre: Cristian Geovanny Rubio Garcia</h1>
+                <h1>Carreta: Ing Sistema</h1>
+                <b>Descripcion:</b><p>Me gusta programar GG!!!</p>
+            </div>
         </section>
     </div>
 </body>
