feat: descripcion de perfil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <img src="img/perfilJavier.png" alt="">
         </div>
         <div class="descripcion__javier">
-
+            <p>Estudiante de Tercer año en Ingenieria de Sistemas Informáticos, actualmente cursando la materia
+                Tecnicas de Programación Para Internet.
+            </p>
         </div>
         <div class="redes__javier">
 
