--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="containerCristian">
@@ -12,7 +13,7 @@
         </section>
     </div>
 
-    <section>
+    <section id="manuemv15">
         <div>
             <img src="img/mv23036.jpeg" alt="fotoPerfil">
         </div>
