--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </p>
         </div>
         <div class="redes__javier">
-
+            <h2>Redes Sociales</h2>
+            <img src="img/github-logo.png" alt="github-logo">
+            <p><a href="https://github.com/JColocho">Github</a></p>
         </div>
     </div>
 </body>
