Cambio de nombre de clase

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div class="contenedor__foto__Fatima">
             </div>
             <div class="contenedor__texto__Fatima">
-                <h1>Fátima Arely Cruz Márquez</h1>
+                <h1 class="titulo_fatima">Fátima Arely Cruz Márquez</h1>
                 <p>
                     Estudiante de la Universidad de El Salvador, cursando la carrrera de Ingeniería de Sistemas Informáticos.
                     Actualmente estoy en tercer año de la carrera. 
                 </p>
             </div>
             <div class="contenedor__redes__Fatima">
-                <h3>
+                <h3 class="titulo_fatima">
                     Redes Sociales
                 </h3>
                 <p><strong>Facebook: </strong>Fatima Marquez</p>
