agregando estilos a la sección

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="containerCristian">
@@ -13,10 +14,15 @@
     </div>
     <div class="container__ivan">
         <h2>Josué Iván Molina Romero</h2>
-        <img src="" alt="">
-        <p>Descripción</p>
+        <img class="img__ivan" src="./img/ivan.jpg" alt="">
+        <p>Estudiante de la carrera de Ingeniería de Sistemas Informáticos de la Facultad Multidisciplinaria Oriental de la Universidad de El Salvador</p>
         <div class="container__ivan__redes">
-            <ul></ul>
+            <h2>Redes sociales</h2>
+            <ul class="redes">
+                <li>Facebook</li>
+                <li>Instagram</li>
+                <li>Threads</li>
+            </ul>
         </div>
     </div>
 </body>
