modificando estilos de la sección

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container__ivan">
         <h2>Josué Iván Molina Romero</h2>
         <img class="img__ivan" src="./img/ivan.jpg" alt="">
-        <p>Estudiante de la carrera de Ingeniería de Sistemas Informáticos de la Facultad Multidisciplinaria Oriental de la Universidad de El Salvador</p>
+        <p class="descripcion">Estudiante de la carrera de Ingeniería de Sistemas Informáticos de la Facultad Multidisciplinaria Oriental de la Universidad de El Salvador</p>
         <div class="container__ivan__redes">
             <h2>Redes sociales</h2>
             <ul class="redes">
