--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="redes__javier">
             <h2>Redes Sociales</h2>
             <img src="img/github-logo.png" alt="github-logo">
-            <p><a href="https://github.com/JColocho">Github</a></p>
+            <span><a href="https://github.com/JColocho">Github</a></span>
         </div>
     </div>
 </body>
